# Webly

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  Todo.md  app.py  config.json  context.md  docker-compose.yml  linked_context.md  logic.md  main.py  notes.txt  pyproject.toml  requirements-full.txt  requirements-ml.txt  requirements.txt
.github/workflows/: ci.yml
chatbot/: base_chatbot.py  chatgpt_model.py  context_builder_agent.py  webly_chat_agent.py
chatbot/prompts/: system_prompts.py
crawl/: crawler.py  handlers.py  run_crawler.py  text_extractor.py
docs/: API_SERVICE.md
docs/productization/: expected-backend-endpoints.md  lovable-prompt.md
embedder/: base_embedder.py  hf_sentence_embedder.py  openai_embedder.py
pipeline/: embed_and_store.py  ingest_pipeline.py  query_pipeline.py
processors/: html_processor.py  page_processor.py  text_chunker.py  text_chunkers.py  text_extractor.py  text_extractors.py  text_summarizer.py
storage/: faiss_db.py  storage_manager.py  vector_db.py
tests/: conftest.py  query_eval_harness.py  test_atlas_paths.py  test_base_agent_policy.py  test_config_validator.py  test_context_builder_agent.py  test_cost_tracker.py  test_embedding_cache.py  test_faiss_db.py  test_ingest_pipeline.py  test_integration.py  test_logging_utils.py  test_project_config.py  test_public_api.py  test_query_context_tools.py  test_query_golden_cases.py  test_query_pipeline_budget.py  test_query_pipeline_contracts.py  test_query_pipeline_read_more.py  test_query_response_composer.py  test_query_retriever.py  test_runtime.py  test_service_chats.py  test_service_errors.py  test_service_ingest.py  test_service_projects.py  test_service_query.py  test_service_status.py  test_storage_repositories.py  test_system_prompts.py
ui/: helpers.py  project.py  sidebar.py  styles.py
ui/tabs/: chat.py  overview.py  run.py  settings.py
vector_index/: faiss_db.py
webcreeper/creeper_core/: base_agent.py  storage.py  utils.py
webly/: __init__.py  _webcreeper.py  config_validator.py  framework.py  project_config.py  query_result.py  runtime.py
webly/chatbot/: chatgpt_model.py  webly_chat_agent.py
webly/crawl/: base_crawler.py  crawler.py  handlers.py
webly/embedder/: base_embedder.py  embedding_cache.py  openai_embedder.py
webly/observability/: cost_tracker.py
webly/pipeline/: embed_and_store.py  embedding_text.py  ingest_pipeline.py  query_context.py  query_pipeline.py  query_response_composer.py  query_retriever.py
webly/processors/: text_chunkers.py  text_extractors.py  text_summarizer.py
(+36 files in other folders)
